crates/sutura-app/tests/snapshots/refused-grain-not-supported__refusal@duckdb.snap
---
source: crates/sutura-app/tests/golden.rs
expression: reason
---
GrainNotSupported:
  metric: average_order
  grain: day
