crates/sutura-app/tests/snapshots/refused-grain-not-supported__refusal@markdown.snap
---
source: crates/sutura-app/tests/golden/catalogs.rs
expression: reason
---
GrainNotSupported:
  metric: average_order
  grain: day
