crates/sutura-app/tests/snapshots/refused-grain-not-supported__refused@datafusion.snap
---
source: crates/sutura-app/tests/golden/data_systems.rs
expression: reason
---
GrainNotSupported:
  metric: average_order
  grain: day
