crates/sutura-app/tests/snapshots/refused-grain-not-supported__refused@oracle.snap
---
source: crates/sutura-app/tests/golden/data_systems.rs
expression: reason
---
GrainNotSupported:
  metric: recurring_revenue
  grain: day
